--- a/trunk/as3/templates/locale/wwwroot/assets/xml/bedrock_copy_en_GB.xml
+++ b/trunk/as3/templates/locale/wwwroot/assets/xml/bedrock_copy_en_GB.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <copy>
-   <copy_header>Donec dolor magna, commodo sed.</copy_header>
+   <copy_header><![CDATA[<span class='title'>HOMEPAGE</span>]]></copy_header>
 </copy>
