--- a/trunk/as3/templates/locale/wwwroot/bedrock_config.xml
+++ b/trunk/as3/templates/locale/wwwroot/bedrock_config.xml
@@ -23,7 +23,7 @@
       <copy_enabled>true</copy_enabled>
       <stylesheet_enabled>true</stylesheet_enabled>
       <default_locale>en_GB</default_locale>
-      <locales>en_GB,fr_FR</locales>
+      <locales>en_GB,fr_FR,ja_JP</locales>
       <!--<locale_prefix></locale_prefix>-->
       <!--<locale_suffix></locale_suffix>-->
     </locale>
@@ -42,9 +42,6 @@
       <name>preloader</name>
     </container>
     <container>
-      <name>navigation</name>
-    </container>
-    <container>
       <name>blocker</name>
     </container>
     <container>
@@ -55,10 +52,6 @@
     <page default_page="true">
       <label>Homepage</label>
       <alias>homepage</alias>
-    </page>
-    <page>
-      <label>Sub Page</label>
-      <alias>sub_page</alias>
     </page>
   </pages>
   <environments>
