--- a/trunk/as3/templates/locale/wwwroot/bedrock_config.xml
+++ b/trunk/as3/templates/locale/wwwroot/bedrock_config.xml
@@ -10,30 +10,27 @@
       <deep_linking_enabled>false</deep_linking_enabled>
       <remoting_enabled>false</remoting_enabled>
       <cache_prevention_enabled>false</cache_prevention_enabled>
-      <shared_sounds_enabled>false</shared_sounds_enabled>
       <shared_enabled>true</shared_enabled>
-      <fonts_enabled>false</fonts_enabled>
-      <copy_enabled>false</copy_enabled>
-      <stylesheet_enabled>false</stylesheet_enabled>
+      <shared_sounds_enabled>false</shared_sounds_enabled>
+      <fonts_enabled>true</fonts_enabled>
+      <css_enabled>true</css_enabled>
+      <resource_bundle_enabled>true</resource_bundle_enabled>
       <locale_enabled>true</locale_enabled>
     </general>
     <!--Locale Settings-->
     <locale>
-      <fonts_enabled>true</fonts_enabled>
-      <copy_enabled>true</copy_enabled>
-      <stylesheet_enabled>true</stylesheet_enabled>
       <default_locale>en_US</default_locale>
       <locales>en_US,fr_FR,ja_JP</locales>
-      <!--<locale_prefix></locale_prefix>-->
-      <!--<locale_suffix></locale_suffix>-->
+      <localized_files>fonts,css,resource_bundle</localized_files>
+      <locale_delimiter>_</locale_delimiter>
     </locale>
     <!--Filename Settings-->
     <file_names>
-      <style_sheet_file_name>style_sheet</style_sheet_file_name>
-      <fonts_file_name>fonts</fonts_file_name>
-      <resource_bundle_file_name>resource_bundle</resource_bundle_file_name>
       <shared_file_name>shared</shared_file_name>
       <site_file_name>site</site_file_name>
+      <fonts_file_name>fonts</fonts_file_name>
+      <css_file_name>flash_style</css_file_name>
+      <resource_bundle_file_name>resource_bundle</resource_bundle_file_name>
       <file_prefix />
       <file_suffix />
     </file_names>
@@ -50,6 +47,9 @@
     </container>
     <container>
       <name>preloader</name>
+    </container>
+    <container>
+      <name>navigation</name>
     </container>
     <container>
       <name>blocker</name>
@@ -76,10 +76,13 @@
       <!--Path Information-->
       <swf_path>../swfs/</swf_path>
       <xml_path>../xml/</xml_path>
-      <css_path>../css/</css_path>
       <image_path>../images/</image_path>
       <video_path>../video/</video_path>
       <audio_path>../audio/</audio_path>
+      <font_path>../fonts/</font_path>
+      <css_path>../css/</css_path>
+      <resource_bundle_path>../xml/</resource_bundle_path>
+      <shared_path>../swfs/</shared_path>
       <!--Remoting-->
     </environment>
     <environment name="local">
@@ -116,15 +119,4 @@
       <!--Remoting-->
     </environment>
   </environments>
-  <locales>
-    <en_US>
-      <some_value>Something something something</some_value>
-    </en_US>
-    <fr_FR>
-      <some_value>Something something something</some_value>
-    </fr_FR>
-    <jp_JP>
-      <some_value>Something something something</some_value>
-    </jp_JP>
-  </locales>
 </config>
