--- a/trunk/as3/templates/locale/wwwroot/bedrock_config.xml
+++ b/trunk/as3/templates/locale/wwwroot/bedrock_config.xml
@@ -3,13 +3,14 @@
   <settings>
     <!--General Settings-->
     <general>
-      <preloader_time>3</preloader_time>
+      <shell_preloader_time>3</shell_preloader_time>
+      <page_preloader_time>0</page_preloader_time>
       <auto_intro_enabled>true</auto_intro_enabled>
       <auto_default_enabled>true</auto_default_enabled>
       <auto_blocker_enabled>true</auto_blocker_enabled>
       <deep_linking_enabled>false</deep_linking_enabled>
-      <remoting_enabled>false</remoting_enabled>
       <cache_prevention_enabled>false</cache_prevention_enabled>
+      <tracking_enabled>true</tracking_enabled>
       <shared_enabled>true</shared_enabled>
       <shared_sounds_enabled>false</shared_sounds_enabled>
       <fonts_enabled>true</fonts_enabled>
@@ -21,19 +22,17 @@
     <!--Locale Settings-->
     <locale>
       <default_locale>en_US</default_locale>
-      <locales>en_US,fr_FR,ja_JP</locales>
+      <locale_list>en_US,fr_FR,ja_JP</locale_list>
       <localized_files>fonts,css,resource_bundle</localized_files>
       <locale_delimiter>_</locale_delimiter>
     </locale>
-    <!--Filename Settings-->
+    <!--File Name Settings-->
     <file_names>
       <shared_file_name>shared</shared_file_name>
       <site_file_name>site</site_file_name>
       <fonts_file_name>fonts</fonts_file_name>
       <css_file_name>flash_style</css_file_name>
       <resource_bundle_file_name>resource_bundle</resource_bundle_file_name>
-      <file_prefix />
-      <file_suffix />
     </file_names>
   </settings>
   <layout>
@@ -72,9 +71,7 @@
       <event_log_level>ERROR</event_log_level>
       <remote_log_level>NONE</remote_log_level>
       <remote_log_url />
-      <!--General Settings-->
-      <tracking_enabled>true</tracking_enabled>
-      <!--Path Information-->
+      <!--Path Settings-->
       <swf_path>../swfs/</swf_path>
       <xml_path>../xml/</xml_path>
       <image_path>../images/</image_path>
@@ -84,40 +81,38 @@
       <css_path>../css/</css_path>
       <resource_bundle_path>../xml/</resource_bundle_path>
       <shared_path>../swfs/</shared_path>
-      <!--Remoting-->
     </environment>
     <environment name="local">
       <!--General Settings-->
       <patterns>
         <pattern>file://</pattern>
       </patterns>
-      <!--Path Information-->
-      <!--Remoting-->
+      <!--Path Settings-->
     </environment>
     <environment name="development">
+      <!--General Settings-->
       <patterns>
         <pattern>dev</pattern>
       </patterns>
-      <!--Path Information-->
-      <!--Remoting-->
+      <!--Path Settings-->
     </environment>
     <environment name="localhost">
+      <!--General Settings-->
       <patterns>
         <pattern>localhost</pattern>
       </patterns>
-      <!--Path Information-->
-      <!--Remoting-->
+      <!--Path Settings-->
     </environment>
     <environment name="staging">
+      <!--General Settings-->
       <patterns>
         <pattern>staging</pattern>
       </patterns>
-      <!--Path Information-->
-      <!--Remoting-->
+      <!--Path Settings-->
     </environment>
     <environment name="production">
-      <!--Path Information-->
-      <!--Remoting-->
+      <!--General Settings-->
+      <!--Path Settings-->
     </environment>
   </environments>
 </config>
